# Spherical-Double-Pendulum

./: .gdbinit  CMakeLists.txt  README.md  main.cpp
eigen3/Eigen/src/Core/: DenseCoeffsBase.h
eigen3/unsupported/Eigen/src/Eigenvalues/: ArpackSelfAdjointEigenSolver.h
scripts/: build.sh
src/: main.cc
src/eigen3/Eigen/src/Core/util/: Memory.h
src/eigen3/Eigen/src/SparseCore/: SparseMatrix.h
